--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -106,6 +106,10 @@
   max-width: 797px;
 }
 
+.search__input:focus {
+  border-bottom: #4285F4 1px solid;
+}
+
 .search__icon {
   width: 34px;
   height: 34px;
