--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -122,6 +122,7 @@
 @media screen and (max-width: 800px) {
   .search__icon {
     margin: 0 20px 0 28px;
+    width: 40px;
   }
 
   .search__label {
