Реализовать функционал приложения

--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -5,6 +5,17 @@
   justify-content: center;
 }
 
+.cards__text {
+  font-size: 20px;
+  line-height: 1.2;
+  color: #fff;
+  text-align: center;
+}
+
+.cards__text_error {
+  color: #EE3465
+}
+
 @media screen and (max-width: 800px) {
   .cards {
     gap: 35px 24px;
