--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,20 +3,20 @@
   padding-bottom: calc(100vh - 556px);
 }
 
-.registr {
+.login {
   max-width: 396px;
 }
 
-.registr__header {
+.login__header {
   padding: 70px 0 0;
 }
 
-.registr__logo {
+.login__logo {
   width: 38px;
   height: 38px;
 }
 
-.registr__title {
+.login__title {
   margin: 37px 0 20px;
   font-size: 24px;
   line-height: 1.21;
@@ -24,13 +24,17 @@
   color: #FFF;
 }
 
-.registr__field {
+.login__field {
   padding: 19px 0 0;
   display: flex;
   flex-direction: column;
 }
 
-.registr__label {
+.login__field:last-of-type {
+  margin-bottom: 202px;
+}
+
+.login__label {
   font-size: 10px;
   font-weight: 400;
   line-height: 1.2;
@@ -39,7 +43,7 @@
   padding: 0;
 }
 
-.registr__input {
+.login__input {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.21;
@@ -52,23 +56,30 @@
   border-bottom: #424242 1px solid;
 }
 
-.registr__input:focus {
+.login__input:focus {
   border-bottom: #4285F4 1px solid;
 }
 
-.registr__input_error {
+.login__input_error {
   color: #EE3465
 } 
 
-.registr__input-error {
+.login__input-error {
   font-size: 10px;
   font-weight: 400;
   line-height: 1.2;
   color: #EE3465;
 }
 
-.registr__button {
-  margin: 202px auto 16px;
+.login__submit-error {
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #EE3465;
+}
+
+.login__button {
+  margin: 11px auto 16px;
   padding: 0;
   border: none;
   outline: none;
@@ -84,17 +95,17 @@
   padding: 15px 0;
 }
 
-.registr__button:hover {
+.login__button:hover {
   opacity: 0.8;
 }
 
-.registr__button_inactive {
+.login__button_inactive {
   opacity: .3;
   background: none;
   pointer-events: none;
 }
 
-.registr__text {
+.login__text {
   color: #8B8B8B;
   font-size: 14px;
   line-height: 1.21;
@@ -103,43 +114,47 @@
   text-align: center;
 }
 
-.registr__link {
+.login__link {
   color: #4285F4;
   text-decoration: none;
 }
 
 @media screen and (max-width: 800px) {
-  .registr__header {
+  .login__header {
     padding: 232px 0 0;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .registr {
+  .login {
     max-width: 260px;
   }
   
-  .registr__header {
+  .login__header {
     padding: 56px 0 0;
   }
 
-  .registr__logo {
+  .login__logo {
     display: block;
     margin: auto;
   }
   
-  .registr__title {
+  .login__title {
     text-align: center;
     margin: 51px 0 61px;
   }
 
-  .registr__button {
-    margin: 290px auto 13px;
+  .login__field:last-of-type {
+    margin-bottom: 290px;
+  }
+
+  .login__button {
+    margin: 11px auto 13px;
     font-size: 12px;
     line-height: 1.22;
   }
 
-  .registr__text {
+  .login__text {
     color: #8B8B8B;
     font-size: 12px;
     line-height: 1.25;
