--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -6,6 +6,10 @@
   position: relative;
 }
 
+.card_unvisible {
+  display: none;
+}
+
 .card__info {
   display: flex;
   justify-content: space-between;
@@ -15,20 +19,28 @@
 .card__title {
   font-size: 15px;
   line-height: 1.2;
-  font-size: 500;
+  font-weight: 500;
   color: #fff;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-right: 5px;
 }
 
 .card__duration {
   font-size: 13px;
   line-height: 1.38;
   color: #8B8B8B;
+  min-width: 105px;
 }
 
 .card__image {
   width: 100%;
+  height: 200px;
 }
-
+.card__link {
+  display: block;
+}
 .card__button {
   width: 100px;
   border-radius: 30px;
