--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -48,6 +48,9 @@
     padding: 20px;
 }
 
+.preloader_unactive {
+    display: none;
+}
 .preloader__container {
     width: 100px;
     height: 100px;
