--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,6 +1,6 @@
 .main__registr {
   margin: auto;
-  padding-bottom: calc(100vh - 625px);
+  padding-bottom: calc(100vh - 613px);
 }
 
 .registr {
@@ -28,6 +28,10 @@
   padding: 19px 0 0;
   display: flex;
   flex-direction: column;
+}
+
+.registr__field:last-of-type {
+  margin-bottom: 131px;
 }
 
 .registr__label {
@@ -67,8 +71,15 @@
   color: #EE3465;
 }
 
+.registr__submit-error {
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #EE3465;
+}
+
 .registr__button {
-  margin: 131px auto 16px;
+  margin: 11px auto 16px;
   padding: 0;
   border: none;
   outline: none;
@@ -133,8 +144,11 @@
     margin: 51px 0 61px;
   }
 
+  .registr__field:last-of-type {
+    margin-bottom: 220px;
+  }
+
   .registr__button {
-    margin: 220px auto 16px;
     font-size: 12px;
     line-height: 1.22;
   }
